--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,11 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
-  }
+    "noFallthroughCasesInSwitch": false,
+    "paths": {
+      "@configs/*": ["./src/configs/*"]
+    }
+  },
+  "include": ["src/**/*"],
+  "exclude": ["**/*test.ts", "**/*jest.startup.ts", "**/__tests__/*"]
 }
