--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "paths": {
-      "@configs/*": ["./src/configs/*"]
+      "@configs/*": ["./src/configs/*"],
+      "@gateways/*": ["./src/gateways/*"]
     }
   },
   "include": ["src/**/*"],
