feat(user): feito a parte de criacao de usuario inicial

--- a/biome.json
+++ b/biome.json
@@ -5,6 +5,11 @@
     "lineWidth": 120
   },
   "organizeImports": { "enabled": true },
+  "javascript": {
+    "parser": {
+      "unsafeParameterDecoratorsEnabled": true
+    }
+  },
   "linter": {
     "enabled": true,
     "rules": {
