--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "@nestjs/swagger": "^8.0.7",
     "@nestjs/typeorm": "^10.0.2",
     "builder-pattern": "^2.2.0",
+    "nest-winston": "^1.9.7",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.20",
-    "typeorm-encrypted": "^0.8.0"
+    "typeorm-encrypted": "^0.8.0",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
