--- a/package.json
+++ b/package.json
@@ -29,9 +29,12 @@
     "@nestjs/swagger": "^8.0.7",
     "@nestjs/typeorm": "^10.0.2",
     "builder-pattern": "^2.2.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "nest-winston": "^1.9.7",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.0",
+    "request-ip": "^3.3.0",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.20",
     "typeorm-encrypted": "^0.8.0",
@@ -45,6 +48,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/request-ip": "^0.0.41",
     "@types/supertest": "^6.0.0",
     "husky": "^9.1.7",
     "jest": "^29.5.0",
