--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,13 +20,53 @@ services:
       PGADMIN_DEFAULT_EMAIL: ${PG_ADMIN_EMAIL}
       PGADMIN_DEFAULT_PASSWORD: ${PG_ADMIN_PASSWORD}
     ports:
-      - "80:80"
+      - "8080:80"
     volumes:
       - pgadmin_data:/var/lib/pgadmin
     networks:
       - pantore_network
     depends_on:
       - postgres
+
+  pantore-app-1:
+    build:
+      context: .
+    container_name: nestjs-app-1
+    ports:
+      - "3001:3000"
+    env_file:
+      - ./env/.env.development
+    networks:
+      - pantore_network
+    depends_on:
+      - postgres
+
+  pantore-app-2:
+    build:
+      context: .
+    container_name: nestjs-app-2
+    ports:
+      - "3002:3000"
+    env_file:
+      - ./env/.env.development
+    networks:
+      - pantore_network
+    depends_on:
+      - postgres
+
+  nginx:
+    image: nginx:latest
+    container_name: pantore_nginx
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+    networks:
+      - pantore_network
+    depends_on:
+      - pantore-app-1
+      - pantore-app-2
+
 
 networks:
   pantore_network:
